scrollbar fix

--- a/src/screens/containers/Login/Loginscreen.css
+++ b/src/screens/containers/Login/Loginscreen.css
@@ -75,6 +75,10 @@
 	overflow-y: auto;
 	overflow-x: hidden;
 }
+.login-form-content::-webkit-scrollbar
+{
+	display: none;
+}
 .login-form-title {
 	font-family: "Open Sans";
 	font-style: normal;
